# 86switch

./: BUG.md  CMakeLists.txt  README.md  sdkconfig.defaults
examples/i2s_recorder/: README.md  sdkconfig
examples/i2s_recorder/main/: CMakeLists.txt  Kconfig.projbuild  i2s_recorder_main.c
examples/xiaomi_home_script/: README.md  test.js  test.lua  test.py  thttpd.lua
main/: 86switch_main.c  CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_port.c  lvgl_port.h  nvs_cfg.c  nvs_cfg.h  rec_asr.c  time_sync.c  time_sync.h  wifi_station.c  wifi_station.h
main/ui/: doMIoT.c  doMIoT.h  doMain.c  doMain.h  doWeather.c  doWeather.h  ui.c  ui.h  ui_Screen1.c  ui_Screen10.c  ui_Screen11.c  ui_Screen12.c  ui_Screen13.c  ui_Screen2.c  ui_ScreenC2.c  ui_ScreenC2_miot.c  ui_ScreenC3.c  ui_ScreenC4.c  ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_helpers.c  ui_img_logo_png.c  ui_img_s1_back1_png.c  ui_img_s1_cut1_png.c  ui_img_s1_cut2_png.c  ui_img_s1_hu_png.c  ui_img_s1_sunny_png.c  ui_img_s1_tmp_png.c  ui_img_s1_wind_png.c  ui_img_s2_back2_png.c  ui_img_s2_color_png.c  ui_img_s2_cut2_2_png.c  ui_img_s2_cut2_3_png.c  ui_img_s2_light_png.c  ui_img_s2_move1_png.c  ui_img_s2_move2_png.c  ui_img_s2_switch2_off_png.c  ui_img_s2_switch2_on_png.c  (+27 more)
msvc/: lv_conf.h  mg_tls_wintls.c  t86switch.c  t86switch.sln  t86switch.vcxproj  t86switch.vcxproj.filters
